# PythonAsssignmentSummer2026

./: .gitignore  README.md  whess-technical-specification.md
Backend/: IMPLEMENTATION_GUIDE.md  pyproject.toml  requirements.txt
Backend/whess_backend/: __init__.py  __main__.py  ai_client.py  app.py  chess_engine.py  clock.py  config.py  errors.py  models.py  room_manager.py  socket_gateway.py
Frontend/: IMPLEMENTATION_GUIDE.md
Frontend/chessFE/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/chessFE/src/: App.tsx  index.css
Frontend/chessFE/src/components/: Button.tsx  ChessRoom.tsx  Lobby.tsx  ResultOverlay.tsx
Frontend/chessFE/src/services/: socket.ts
Frontend/chessFE/src/types/: index.ts
Frontend/chessFE/src/utils/: cn.ts
Whess-AI-Server-main/: .env.example  .gitignore  IMPLEMENTATION_REPORT.md  README.md  download_eco.py  refactor_soc.py  requirements.txt
Whess-AI-Server-main/ai_engine_backup/: __init__.py  api_models.py  full_pipeline.py  main.py  pipeline.py  predictor.py  schemas.py  server.py  stockfish_analyzer.py
Whess-AI-Server-main/ai_engine_backup/agents/: __init__.py  data_miner.py  head_coach.py  tactician.py
Whess-AI-Server-main/ai_engine_backup/eco_data/: eco.json
Whess-AI-Server-main/ai_engine_backup/llm/: __init__.py  client.py  json_utils.py
Whess-AI-Server-main/ai_engine_backup/prompts/: head_coach.txt
Whess-AI-Server-main/ai_engine_backup/services/: __init__.py  opening_book.py
Whess-AI-Server-main/src/ai_engine/: main.py
Whess-AI-Server-main/src/ai_engine/ai_agents/: data_miner.py  (+3 more)
(+13 files in other folders)
