[project]
name = "whess-backend"
version = "0.1.0"
description = "Realtime Web Game Server for Whess."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-socketio>=5.11.0",
    "python-chess>=1.999",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
